--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
+"dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "next": "15.5.3",
+    "chart.js": "^4.4.1",
+    "react-chartjs-2": "^5.2.0"
+}
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
